tests/paczka1/small_fuzzy/84705529.err
Error in line 1: 9dMf5m9MRet A432 30,4
Error in line 3: 9dMf5m9MRet S684 90,1
